# InfluenceIQ

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  ruff.toml  skills-lock.json
backend/: .env.example  Dockerfile  Dockerfile.ml  README.md  alembic.ini  pyproject.toml  requirements.txt  ruff.toml  test_suite.py
backend/api/: main.py
backend/api/middleware/: cors.py  error_handlers.py
backend/api/routers/: auth.py  billing.py  campaigns.py  demo.py  health.py  influencers.py  lists.py  onboarding.py  settings.py  websocket.py  workspace.py
backend/api/schemas/: auth.py  billing.py  campaign.py  errors.py  influencer.py  onboarding.py  settings.py  ws_event.py
backend/app/: celery_app.py  celery_factory.py  config.py  main.py  service_roles.py
backend/app/api/: demo.py  health.py  influencers.py
backend/app/db/: models.py
backend/app/middleware/: cors.py  logging.py
backend/app/services/: pipeline_state.py  redis_client.py
backend/app/tasks/: crawl.py  extract.py  score.py  search.py
backend/core/: auth.py  config.py  lifecycle.py
backend/core/billing/: __init__.py  stripe_client.py  sync.py
backend/core/cache/: campaign_cache.py  event_log.py  idempotency.py  pipeline_state.py  redis_client.py
backend/core/celery/: app.py  factory.py  roles.py
backend/core/database/: models.py  session.py
backend/demo/: __init__.py  schemas.py  seed.py  smoke.py
backend/ml/: README.md  bot_rings.py  contracts.py  final_risk.py  graph.py  llm_explainer.py  semantic_v2.py
backend/ml/models/: base.py  llama_explainer.py  openrouter_llm.py  registry.py  roberta_aigc.py
backend/pipeline/: campaign_reset.py  model_classifiers.py
backend/pipeline/analysis/: bot_behavior.py  brand_safety_blocklist.py  comment_behavior.py  engagement_quality.py  external_signals.py  fake_comment.py  fake_follower.py  sentiment.py  sentiment_backends.py  source_confidence.py
backend/pipeline/candidate/: builder.py
backend/pipeline/content/: cache.py  content_extractor.py  contracts.py  engagement_rollup.py  enrichment.py  errors.py  fetcher.py  rate_limiter.py  search_providers.py
backend/pipeline/detection/: __init__.py  bot_behavior_detector.py  brand_safety_detector.py  coordinated_ring_detector.py  detection_classifier.py  fake_comment_detector.py  fake_follower_detector.py
backend/pipeline/events/: __init__.py
backend/pipeline/extraction/: __init__.py  contact_info.py  entities.py  handles.py  social_urls.py
backend/pipeline/fusion/: components.py  fusion.py  legacy.py  sub_scores.py  trust.py  versioning.py  weights.py
backend/pipeline/identity/: canonical.py  fuzzy_match.py  persistence.py  resolver.py  url_match.py
backend/pipeline/orchestrator/: __init__.py  pipeline.py
backend/pipeline/tasks/: __init__.py  _common.py  crawl.py  deep.py  enrich.py  extract.py  orchestrator.py  score.py  search.py
backend/scripts/: test_youtube.py  test_youtube_cache.py
backend/tests/api/: test_backend_contracts.py  test_billing.py  test_campaign_briefs_e2e.py  test_deep_analysis_api.py  test_phase1_foundation.py  test_phase3_api_surface.py  test_phase4_websocket.py  test_phase5_workspace.py  test_smoke.py
backend/tests/core/: test_lifecycle.py
backend/tests/fixtures/: creator_risky.html  researcher.html  risky.html
backend/tests/integration/: conftest.py  test_apify_live_instagram.py
backend/tests/ml/: conftest.py  test_adapters.py  test_bot_rings.py  test_engines.py  test_final_risk.py  test_models_registry.py  test_scoring.py
backend/tests/pipeline/: conftest.py  test_apify_client.py  test_apify_providers.py  test_bot_behavior.py  test_campaign_reset.py  test_campaign_weights.py  test_candidate_builder.py  test_celery_tasks.py  test_circuit_breaker.py  test_comment_behavior.py  test_comment_e2e.py  test_comment_persistence.py  test_comment_providers.py  test_contact_info.py  test_coordinated_engagement.py  test_credibility.py  test_deep_analysis.py  test_detection.py  test_embedding_env_wiring.py  test_engagement_quality.py  test_engagement_rollup.py  test_extraction.py  test_fake_comment.py  test_fake_follower.py  test_fetch_errors.py  test_identity.py  test_identity_cluster.py  test_ml_adapters.py  test_ml_smoke.py  test_model_classifiers.py  test_orchestrator.py  test_pipeline.py  test_pipeline_state.py  test_query_planning.py  test_queue_routing.py  test_renormalized_fusion.py  test_role4_candidate.py  test_role4_scraping.py  test_role5.py  test_score_e2e.py  (+8 more)
backend/workers/ai_agent/: worker.py
backend/workers/scoring/: worker.py
backend/workers/scraping/: worker.py
scoring-and-extraction/ai/: pyproject.toml
scoring-and-extraction/ai/tests/: test_engines.py  test_final_risk.py  test_models_registry.py
scoring-and-extraction/ai/training/: train_qlora.py
scoring-and-extraction/scraper-service/: Cargo.toml
(+410 files in other folders)
