[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "influenceiq-backend"
version = "0.2.0"
description = "Trust-aware influencer discovery platform — backend."
requires-python = ">=3.11"
readme = "../README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["backend.ml*", "tests*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
  "mypy>=1.14,<2",
  "httpx>=0.28,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
  "integration: requires running docker stack",
  "ml: requires the optional backend.ml package",
]
filterwarnings = [
  "ignore::DeprecationWarning:sqlalchemy.*",
  "ignore::DeprecationWarning:pydantic.*",
]
# Ruff is configured at the repo root in `ruff.toml`. We intentionally
# do NOT add a `[tool.ruff]` section here so the root config is the
# single source of truth (otherwise the per-file-ignores get masked
# by the closer pyproject.toml's narrower config).
