[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "influenceiq-backend"
version = "0.2.0"
description = "Trust-aware influencer discovery platform — backend."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "celery[redis]==5.4.0",
  "redis==5.1.1",
  "flower==2.0.1",
  "sqlalchemy==2.0.35",
  "alembic==1.13.3",
  "psycopg[binary]==3.2.3",
  "qdrant-client==1.12.1",
  "httpx==0.27.2",
  "tenacity==9.0.0",
  "python-dotenv==1.0.1",
  "structlog==24.4.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "PyJWT==2.10.1",
  "rapidfuzz==3.10.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["backend.ml*", "tests*"]

[project.optional-dependencies]
ml = [
  "prometheus-client>=0.21,<1",
  "numpy>=2,<3",
  "networkx>=3,<4",
  "transformers>=4.46,<5",
  "torch>=2.5,<3",
  "pymongo>=4.10,<5",
  "minio>=7.2,<8",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
  "mypy>=1.14,<2",
  "httpx>=0.27,<1",
  "networkx>=3,<4",
  "numpy>=2,<3",
  "prometheus-client>=0.21,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
  "integration: requires running docker stack",
  "ml: requires the optional backend.ml package",
]
filterwarnings = [
  "ignore::DeprecationWarning:sqlalchemy.*",
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Ruff is configured in `backend/ruff.toml`. We intentionally
# do NOT add a `[tool.ruff]` section here so that file remains the
# single source of truth (otherwise the per-file-ignores get masked
# by the closer pyproject.toml's narrower config).
