[project]
name = "umgl-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "numpy>=2.1,<3",
  "scikit-learn>=1.6,<2",
  "networkx>=3.4,<4",
  "torch>=2.5,<3",
  "transformers>=4.47,<5",
  "sentence-transformers>=3.3,<4",
  "peft>=0.14,<1",
  "datasets>=3.2,<4",
  "accelerate>=1.2,<2",
  "nats-py>=2.9,<3",
  "prometheus-client>=0.21,<1",
  "opentelemetry-api>=1.29,<2",
  "opentelemetry-sdk>=1.29,<2",
]

[project.optional-dependencies]
graph = ["torch-geometric>=2.6,<3", "dgl>=2.4,<3"]
training = ["unsloth>=2025.1", "bitsandbytes>=0.45,<1", "trl>=0.13,<1"]
deberta = ["transformers>=4.47,<5", "torch>=2.5,<3"]
gnn = ["torch-geometric>=2.6,<3", "torch>=2.5,<3"]
llm = ["httpx>=0.28,<1"]
dev = ["pytest>=8.3,<9", "ruff>=0.8,<1", "mypy>=1.14,<2", "httpx>=0.28,<1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

