[package]
name = "scraper-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
umgl-contracts = { path = "../../crates/umgl-contracts" }
umgl-service-kit = { path = "../../crates/umgl-service-kit" }
uuid.workspace = true
